--- a/css/style.css
+++ b/css/style.css
@@ -125,13 +125,43 @@ html{
             -Personalizacion del usuario
             -Los estilos del autor
 
-        #La especificad del selector: Es el peso que tiene un selector cuando hay conflicto de estilos.
+    2) La especificad del selector: Es el peso que tiene un selector cuando hay conflicto de estilos.
             Etiquetas y pseudoelementos ........0,0,0,1
             Clases,atributos y pseudoclases ....0,0,1,0
             identificadores.....................0,1,0,0
             Estilos en línea....................1,0,0,0
             !important.............Rompe la especifidad
             
-        #Orden de aparicion
+    3) La Herencia, un selector puede heredar valores de sus ancestros, se usa el valor inherit 
 
 */
+
+/* practicando cascada y especificad */
+
+blockquote#cita-marco.cita-marco{
+    background-color:lightskyblue;
+}
+
+blockquote{
+    background-color:rgb(125, 201, 252) !important ;
+}
+#cita-marco{
+    background-color:tomato;
+}
+blockquote.cita-marco{
+    background-color:yellow;
+}
+
+.cita-marco{
+    background-color:cornflowerblue;
+    font-size: 33px;
+}
+
+blockquote#cita-marco{
+    background-color:rgb(49, 145, 137);
+}
+
+.cita-marco cite{
+    background-color:pink;
+    background-color:inherit;
+}
