--- a/css/box-model.css
+++ b/css/box-model.css
@@ -158,3 +158,33 @@ html{
 .clearfix{
     clear:both;
 } 
+
+.margin-collapse{
+    background:rgb(231, 161, 161);
+}
+
+.margin-collapse section{
+    border:thin solid black;
+    margin-top:16px;
+    margin-bottom: 16px;
+}
+
+.margin-collapse span{
+    display:inline-block;
+    margin-right: 16px;
+    margin-left:16px;
+}
+
+/*Centrado de cajas*/
+
+.sitio-web{
+    border:thin solid black;
+    background-color: thistle;
+    width:800px;
+    height: 1000px;
+    padding: 16px;
+    text-align: center;
+    margin-left:auto;
+    margin-right:auto;
+    /*margin:0 auto;*/
+}
