--- a/css/position.css
+++ b/css/position.css
@@ -30,3 +30,74 @@
 */
 
 /* static: Es el valor por defecto, significa que el elemento respeta el flujo del documento HTML. por lo que no se puede mover ni posicionar*/
+
+.static{
+  background-color: yellow;
+  position:static;
+}
+
+/*relative:el elemento conserva sus dimensiones y posicion originalen el flujo del documento. Si se mueve toma como referencia su posicion original*/
+
+.relative{
+  background-color: turquoise;
+  position:relative;
+  left:50px;
+  width:200px;
+}
+
+/*absolute: El elemento pierde sus dimensiones y posicion original en el flujo del documento. Se se mueve puede tomar como referencia 2 elementos
+
+1)El primer ancestro con posicionamiento relativo
+
+2) Si no encuentra un ancestro relativo, se mueve respecto al documento HTML*/
+
+.absolute{
+  background-color: palevioletred;
+  position:absolute;
+  width:200px;
+  height:50px;
+  right:0;
+  bottom:0;
+}
+
+.relative-parent{
+  position:relative;
+  background-color: red;
+  width:600px;
+  height: 50px;
+  top:50px;
+  left:50px;
+}
+.absolute-child{
+  background-color: tan;
+  position:absolute;
+  width: 200px;
+  bottom: 0;
+  right: 0;
+}
+
+/*fixed: el elemento pierde sus dimensiones y posicion original en el flujo del documento. Si se mueve toma como refeerencia el documento HTML y queda fijo en la posicion, cuando el scroll se mueva,el elemento no lo hará, queda FIJO*/
+
+
+.fixed{
+  background-color: lightgreen;
+  position:fixed;
+  width: 300px;
+  height: 300px;
+  right:20px;
+  bottom:10px;
+  top:30px;
+  left:400px;
+}
+
+
+/*sticky: es una combinación de posicionamiento relative y fiexd, para este posicionamiento las propiedades de top,left,bottom y right no mueven el elemento,sirven como un punto de referencia, mientras no lleguen a ese valor, el elemento se comporta como relative, cuand ollega se convierte en fixed 
+
+Para que este comportamiento funcione, el elemento sticky debe ser hijo directo del body o su elemento contenedor debe tener dimensiones definidas y solo sera sticky dentro de las dimensiones de su coentendor padre.
+*/
+
+.sticky{
+  position:sticky;
+  background-color: rgb(0, 119, 255);
+  top:50px;
+}
