--- a/css/position.css
+++ b/css/position.css
@@ -101,3 +101,38 @@ Para que este comportamiento funcione, el elemento sticky debe ser hijo directo 
   background-color: rgb(0, 119, 255);
   top:50px;
 }
+
+.sticky-parent{
+  border:thin dashed black;
+  height: 600px;
+}
+
+.sticky-child{
+  background-color: lightslategray;
+  position:sticky;
+  top:70px;
+}
+
+/* z-index: propiedad que permite controlar la profundidad de los elementos posicionados, su valor por defecto es auto, acepta números positivos, negativos y cero.
+
+A mayor valor el elemento esta más al frente, a menos valor más al fondo.
+
+Un elemento padre nunca podrá estar sobre sus elementos hijos, sin embargo los elementos hijos si pueden dándoles un valor negativo*/
+
+.z-index-1,.z-index-2{
+  background-color: brown;
+  border:thin solid black;
+  position:relative;
+  width: 200px;
+  height: 200px;
+}
+
+.z-index-1{
+  z-index: 0;
+}
+
+.z-index-2{
+  top: -200px;
+  left: 150px;
+  z-index: 1;
+}
