--- a/css/position.css
+++ b/css/position.css
@@ -117,7 +117,7 @@ Para que este comportamiento funcione, el elemento sticky debe ser hijo directo 
 
 A mayor valor el elemento esta más al frente, a menos valor más al fondo.
 
-Un elemento padre nunca podrá estar sobre sus elementos hijos, sin embargo los elementos hijos si pueden dándoles un valor negativo*/
+Un elemento padre nunca podrá estar sobre sus elementos hijos, sin embargo los elementos hijos si pueden dándoles un valor negativo y que el elemento padre no tenga definido el elemento z-index*/
 
 .z-index-1,.z-index-2{
   background-color: brown;
@@ -135,4 +135,22 @@ Un elemento padre nunca podrá estar sobre sus elementos hijos, sin embargo los 
   top: -200px;
   left: 150px;
   z-index: 1;
+}
+
+
+.z-index-parent,.z-index-child{
+  background-color: turquoise;
+  width: 300px;
+  height:300px;
+  position:relative;
+}
+
+.z-index-child{
+  background-color: mediumslateblue;
+  position:relative;
+  width: 150px;
+  height: 150px;
+  top:-75px;
+  left: 75px;
+  z-index:-3;
 }
