--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,3 +1,24 @@
-body{
-    background-color: turquoise;
+*,*::after,*::before{
+    box-sizing: border-box;
+}
+.container{
+    background-color: #333;
+    height: 300px;
+    margin:30px;
+    display:flex;
+    flex-direction: row-reverse; /* row-reverse - column - column-reverse*/
+    flex-wrap: wrap-reverse; /* nowrap - wrap-reverse*/
+    /*flex-flow: column wrap  es un shorcut de flex-direction y flex-wrap;*/
+    flex-flow: row nowrap;
+    justify-content: flex-start;  /*  flex-start | center | flex-end | space-between | space-around | space-evenly */
+    align-items: stretch; /* stretch | flex-start | flex-end | center | baseiine */
+
+
+}
+
+.item{
+    border: medium solid #999;
+    background-color: #666;
+    font-size: 3em;
+    width: 20%;
 }
