--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -3,22 +3,40 @@
 }
 .container{
     background-color: #333;
-    height: 300px;
+    height: 400px;
+    width: 100%;
     margin:30px;
     display:flex;
-    flex-direction: row-reverse; /* row-reverse - column - column-reverse*/
-    flex-wrap: wrap-reverse; /* nowrap - wrap-reverse*/
+    flex-direction: row; /* row - row-reverse - column - column-reverse*/
+    flex-wrap: nowrap; /* wrap - nowrap - wrap-reverse*/
     /*flex-flow: column wrap  es un shorcut de flex-direction y flex-wrap;*/
     flex-flow: row nowrap;
     justify-content: flex-start;  /*  flex-start | center | flex-end | space-between | space-around | space-evenly */
     align-items: stretch; /* stretch | flex-start | flex-end | center | baseiine */
-
+    align-content: flex-start;  /*Define la alineacion de los hijos en el eje tranversal(cross axis), No funciona cuando los hijos estan en una sola lìnea
+    flex-start | flex-end | center  | space-between | space-around | space-evenly   */
 
 }
 
 .item{
-    border: medium solid #999;
+    border: medium solid rgb(187, 16, 16);
     background-color: #666;
-    font-size: 3em;
-    width: 20%;
+    font-size: 2em;
+    /*width: 100px;*/
+    flex-grow: 0;
+    /* Cuando las cajas flexbox tenga espacio sobrante, es la habilidad o el factor de crecer, valor por defecto es 0, no aceptan valores negativos*/
+    flex-shrink: 1;
+    /*Cuando la caja flexbo no tenga un espacio sobrante, es la habilidad o el factor de encogerse, Valor por defecto es 1, no valores negativos*/
+    flex-basis: 100px;
+    /* Es el tamaño del elemento hijo dentro de la linea de la caja flexbox
+       Si la caja flexbox tiene direcciòn fila, flex-basics representa el width
+       Si la caja flexbox tinee direcciòn de columna, flex-basis representa el height
+       valor por defecto : auto */
+    flex: 0 1 auto;
+    /*Es un shorthand de las propiedades flex-grow, flex-shrink, flex-basis*/
+}
+
+.item:nth-child(2){
+    /*flex-grow: 2;*/  
+    flex-shrink: 2;  
 }
